# moteur-3d-potato-engine

./: .gitignore  CMakeLists.txt  README.md
Include/: Camera.h  Engine.h
Include/Audio/: AudioComponent.h  AudioManager.h  SoundAsset.h
Include/Core/ImGui/: imgui_function.h
Include/Core/ImGui/Config/: imstb_truetype.h
Include/Graphics/: Buffers.h  FileParser.h  Mesh.h  Vertex.h
Include/Graphics/RenderPipeline/: ConstantBuffer.h  MeshBuffer.h  Renderer.h  ShaderManager.h  Vertex.h
Include/Logic/: Actor.h  Component.h  MeshComponent.h  Scene.h  SceneManager.h  TransformComponent.h  UUID.h
Include/Maths/: Quaternion.h  Vector3.h
Include/Physics/: physicsBody.h  physicsBodyFactory.h  physicsBroadPhaseLayerManager.h  physicsLayerManager.h  physicsShape.h  physicsSystem.h  physicsTypes.h
Include/Texture/: Material.h  Texture.h  TextureManager.h
libs/Jolt/Distribution/: HairApplyDeltaTransform.cso  HairApplyGlobalPose.cso  HairCalculateCollisionPlanes.cso  HairCalculateRenderPositions.cso  HairGridAccumulate.cso  HairGridClear.cso  HairGridNormalize.cso  HairIntegrate.cso  HairSkinRoots.cso  HairSkinVertices.cso  HairTeleport.cso  HairUpdateRoots.cso  HairUpdateStrands.cso  HairUpdateVelocity.cso  HairUpdateVelocityIntegrate.cso  TestCompute.cso  TestCompute2.cso
source/: Camera.cpp  Engine.cpp  Main.cpp
source/Audio/: AudioComponent.cpp  AudioManager.cpp
source/Core/: MainTest.cpp
source/Core/ImGui/: imgui_function.cpp
source/Graphics/: FileParser.cpp  FileParser.h  MainTestGraphics.cpp
source/Graphics/Parser/: Buffers.cpp  FileParser.cpp  Mesh.cpp
source/Graphics/RenderPipeline/: MeshBuffer.cpp  Renderer.cpp  ShaderManager.cpp
source/Graphics/RenderPipeline/Shaders/: PixelShader.hlsl  TestShader.hlsl  VertexShader.hlsl
source/Logic/: MeshComponent.cpp  TransformComponent.cpp
source/Maths/: Quaternion.cpp  Vector3.cpp  mathsVector3.cpp
source/Physics/: BodyFactory.cpp  BroadPhaseLayerManager.cpp  gravity.cpp  physicsBody.cpp  physicsBody.h  physicsBodyFactory.cpp  physicsBodyFactory.h  physicsBroadPhaseLayerManager.cpp  physicsBroadPhaseLayerManager.h  physicsBroadPhaseLayers.h  physicsComponent.h  physicsContactListener.cpp  physicsContactListener.h  physicsEngine.cpp  physicsLayerManager.cpp  physicsLayerManager.h  physicsLayers.h  physicsShape.h  physicsSystem.cpp  physicsSystem.h  physicsTests.cpp  rigidbody.h
source/Physics/Ancien/: oldphysicsEngine.cpp  oldphysicsEngine.h  oldphysicsTests.h  oldrigidbody.cpp  oldrigidbody.h
source/Texture/: Material.cpp  Texture.cpp  TextureManager.cpp
